# ai-assistant

ai-assistant/: README.md  ai_agent.py  camera_state.py  main.py  pyproject.toml  speech_to_text.py  text_to_speech.py  tools.py
