[project]
name = "ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elevenlabs>=2.22.0",
    "gradio>=5.49.1",
    "groq>=0.33.0",
    "gtts>=2.5.4",
    "langchain>=0.2",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.2",
    "opencv-python>=4.12.0.88",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.16.3",
    "sounddevice>=0.5.3",
    "speechrecognition>=3.14.3",
]
